spec/fixtures/gitops-deploy-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-rubyapp
  namespace: make-gitops-namespace-test-dev
spec:
  replicas: 5
  selector:
    matchLabels:
      app: helloworld-rubyapp
  template:
    metadata:
      labels:
        app: helloworld-rubyapp
    spec:
      containers:
      - name: rubyapp
        image: ministryofjustice/cloud-platform-helloworld-ruby
        ports:
        - containerPort: 4567
