spec/fixtures/gitops-deploy-files/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-rubyapp-ingress
  namespace: make-gitops-namespace-test-dev
spec:
  tls:
  - hosts:
    - make-gitops-namespace-test-dev.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: make-gitops-namespace-test-dev.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: rubyapp-service
          servicePort: 4567
