spec/fixtures/gitops-deploy-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rubyapp-service
  namespace: make-gitops-namespace-test-dev
  labels:
    app: rubyapp-service
spec:
  ports:
  - port: 4567
    name: http
    targetPort: 4567
  selector:
    app: helloworld-rubyapp
